--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 	<h1>Welcome Boss</h1>
 	
-	<form action="submitForm" method="POST">
+	<form action="Welcome.html" method="POST">
 		<label class="text-primary">A</label>
 		<input type="text" placeholder="Enter A value" class="form-control" name="a" />
 		
