--- a/Welcome.html
+++ b/Welcome.html
@@ -8,25 +8,13 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
-	<h1>Enter Details</h1>
+	<h1>Welcome Boss</h1>
 	
-	<form action="submitForm" method="POST">
-		<label class="text-primary">A</label>
-		<input type="text" placeholder="Enter A value" class="form-control" name="a" />
+	<form action="index.html" method="POST">
 		
-		<label class="text-primary">B</label>
-		<input type="text" placeholder="Enter B value" class="form-control" name="b" />
+		<input type="hidden" name="a" />
 		
-		<label class="text-primary">Opr</label>
-		<select class="form-control" name="opr">
-			<option value="add">+</option>
-			<option value="sub">-</option>
-			<option value="mul">*</option>
-			<option value="div">/</option>
-		</select>
-		
-		<br>
-		<button type="submit" class="btn btn-success">Submit</button>
+		<button type="submit" class="btn btn-outline-success">Back</button>
 	</form>
 
 </body>
