--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
 		</select>
 		
 		<br>
+		
 		<button type="submit" class="btn btn-success">Submit</button>
+		<a href="Welcome.html" class="btn btn-success">Next Click here</button>
 	</form>
 
 </body>
