--- a/index.html
+++ b/index.html
@@ -8,24 +8,9 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
-	<h1>Enter Values here</h1>
+	<h1>Enter here</h1>
 	
 	<form action="Welcome.html" method="POST">
-		<label class="text-primary">A</label>
-		<input type="text" placeholder="Enter A value" class="form-control" name="a" />
-		
-		<label class="text-primary">B</label>
-		<input type="text" placeholder="Enter B value" class="form-control" name="b" />
-		
-		<label class="text-primary">Opr</label>
-		<select class="form-control" name="opr">
-			<option value="add">+</option>
-			<option value="sub">-</option>
-			<option value="mul">*</option>
-			<option value="div">/</option>
-		</select>
-		
-		<br>
 		
 		<button type="submit" class="btn btn-success">Submit</button>
 		<a href="Welcome.html" class="btn btn-success">Next Click here</button>
