--- a/index.html
+++ b/index.html
@@ -8,13 +8,10 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
-	<h1>Enter here</h1>
+	<h1 class="text-primary">Enter here</h1>
 	
-	<form action="Welcome.html" method="POST">
-		
-		<button type="submit" class="btn btn-success">Submit</button>
+
 		<a href="Welcome.html" class="btn btn-success">Next Click here</button>
-	</form>
 
 </body>
 </html>
