--- a/Welcome.html
+++ b/Welcome.html
@@ -8,14 +8,10 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
-	<h1>Welcome Boss</h1>
+	<h1 class="text-center text-primary">Welcome Boss</h1>
 	
-	<form action="index.html" method="POST">
-		
-		<input type="hidden" name="a" />
-		
-		<button type="submit" class="btn btn-outline-success">Back</button>
-	</form>
+<a href="index.html" class="btn btn-outline-success">Back</a>
+
 
 </body>
 </html>
