--- a/Welcome.html
+++ b/Welcome.html
@@ -10,7 +10,7 @@
 <body>
 	<h1 class="text-center text-primary">Welcome Boss</h1>
 	
-<a href="index.html" class="btn btn-outline-success">Back</a>
+<a href="index.html" class="btn btn-outline-success text-center">Back</a>
 
 
 </body>
