--- a/port.html
+++ b/port.html
@@ -1,33 +1,83 @@
-<%@ page language="java" contentType="text/html; charset=US-ASCII"
-    pageEncoding="US-ASCII"%>
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "https://www.w3.org/TR/html4/loose.dtd">
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=US-ASCII">
-<title>First JSP</title>
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My Portfolio</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            line-height: 1.6;
+            margin: 0;
+            padding: 0;
+        }
+        header {
+            background-color: #333;
+            color: #fff;
+            padding: 1rem;
+            text-align: center;
+        }
+        section {
+            padding: 2rem;
+            margin: 2rem auto;
+            max-width: 800px;
+        }
+        h2 {
+            color: #333;
+        }
+        .about-me, .projects, .contact {
+            background-color: #f4f4f4;
+            border-radius: 5px;
+            padding: 1rem;
+            margin-bottom: 1rem;
+        }
+        .projects {
+            background-color: #e0e0e0;
+        }
+        footer {
+            background-color: #333;
+            color: #fff;
+            text-align: center;
+            padding: 1rem;
+            position: fixed;
+            bottom: 0;
+            width: 100%;
+        }
+    </style>
 </head>
 <body>
-	<h1>Enter Details</h1>
-	
-	<form action="submitForm" method="POST">
-		<label class="text-primary">A</label>
-		<input type="text" placeholder="Enter A value" class="form-control" name="a" />
-		
-		<label class="text-primary">B</label>
-		<input type="text" placeholder="Enter B value" class="form-control" name="b" />
-		
-		<label class="text-primary">Opr</label>
-		<select class="form-control" name="opr">
-			<option value="add">+</option>
-			<option value="sub">-</option>
-			<option value="mul">*</option>
-			<option value="div">/</option>
-		</select>
-		
-		<br>
-		<button type="submit" class="btn btn-success">Submit</button>
-	</form>
+    <header>
+        <h1>My Portfolio</h1>
+        <p>Welcome to my portfolio website</p>
+    </header>
 
+    <section class="about-me">
+        <h2>About Me</h2>
+        <p>Replace this text with information about yourself, your skills, and your experience.</p>
+    </section>
+
+    <section class="projects">
+        <h2>Projects</h2>
+        <div>
+            <h3>Project 1</h3>
+            <p>Description of Project 1</p>
+        </div>
+        <div>
+            <h3>Project 2</h3>
+            <p>Description of Project 2</p>
+        </div>
+        <!-- Add more projects as needed -->
+    </section>
+
+    <section class="contact">
+        <h2>Contact Me</h2>
+        <p>Email: your-email@example.com</p>
+        <p>Phone: +1234567890</p>
+        <p>LinkedIn: <a href="https://www.linkedin.com/yourprofile">Your LinkedIn Profile</a></p>
+    </section>
+
+    <footer>
+        <p>&copy; 2024 Your Name</p>
+    </footer>
 </body>
 </html>
