--- a/Welcome.html
+++ b/Welcome.html
@@ -1,17 +1,45 @@
-
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "https://www.w3.org/TR/html4/loose.dtd">
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=US-ASCII">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Welcome</title>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+
+<style>
+/* Default styles */
+.text-center {
+    text-align: center;
+}
+
+.btn {
+    margin: 5px;
+}
+
+/* Media queries */
+@media (max-width: 768px) {
+    /* Styles for screens up to 768px wide */
+    .btn {
+        display: block;
+        width: 100%;
+    }
+}
+
+@media (min-width: 769px) {
+    /* Styles for screens wider than 768px */
+    .btn {
+        display: inline-block;
+        width: auto;
+    }
+}
+</style>
+
 </head>
 <body>
-	<h1 class="text-center text-primary">Welcome Boss</h1>
-	
-<a href="index.html" class="btn btn-outline-success text-center">Back</a>
-<a href="port.html" class="btn btn-outline-success text-center">Portfolio</a>
-
+    <h1 class="text-center text-primary">Welcome Boss</h1>
+    
+    <a href="index.html" class="btn btn-outline-success text-center">Back</a>
+    <a href="port.html" class="btn btn-outline-success text-center">Portfolio</a>
 
 </body>
 </html>
