--- a/index.html
+++ b/index.html
@@ -1,16 +1,50 @@
-
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "https://www.w3.org/TR/html4/loose.dtd">
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=US-ASCII">
 <title>Home</title>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+
+<style>
+/* Default styles */
+.text-center {
+    text-align: center;
+}
+
+.btn-center {
+    display: block;
+    margin: 0 auto;
+}
+
+/* Media queries */
+@media (max-width: 768px) {
+    /* Styles for screens up to 768px wide */
+    .text-center {
+        font-size: 24px; /* Example: Adjusting font size */
+    }
+
+    .btn-center {
+        width: 80%; /* Example: Adjusting button width */
+    }
+}
+
+@media (min-width: 769px) {
+    /* Styles for screens wider than 768px */
+    .text-center {
+        font-size: 32px; /* Example: Adjusting font size */
+    }
+
+    .btn-center {
+        width: auto; /* Example: Reverting button width to default */
+    }
+}
+</style>
+
 </head>
 <body>
-	<h1 class="text-primary text-center">Enter here</h1>
-	
-
-		<a href="Welcome.html" class="btn btn-success btn-center">Next Click here</button>
+    <h1 class="text-primary text-center">Enter here</h1>
+    
+    <a href="Welcome.html" class="btn btn-success btn-center">Next Click here</a>
 
 </body>
 </html>
